--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Alexander Ng
 description: Student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:
+avatar: https://avatars2.githubusercontent.com/u/3768985?v=4&s=460
 #
 # Flags below are optional
 #
@@ -20,7 +20,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:
   pinterest:
