--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Alexander Ng
 description: Student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars2.githubusercontent.com/u/3768985?v=4&s=460
+avatar: https://scontent-dft4-1.xx.fbcdn.net/v/t1.0-9/12798965_10153935580082521_628897562279730064_n.jpg?oh=ca8743fcbc1865e649b15158194a0c96&oe=5A42126D
 #
 # Flags below are optional
 #
