--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ avatar: https://scontent-dft4-1.xx.fbcdn.net/v/t1.0-9/12798965_10153935580082521
 #
 # Flags below are optional
 #
-
+future: true
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
