--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ future: true
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: alexng1991@gmail.com
   facebook:
   flickr:
   github: 
